# namecheap-wrapper

./: .coverage  LICENSE  README.md  pyproject.toml
src/app/: create.py  dependencies.py  get_info.py  list.py  parse_csr.py
src/namecheap_wrapper/: namecheap.py
src/namecheap_wrapper/client/: client.py
src/namecheap_wrapper/schemas/request/: ssl.py
src/namecheap_wrapper/schemas/response/ssl/: create.py
src/namecheap_wrapper/services/: ssl.py
tests/: conftest.py
tests/unit/: test_namecheap.py
tests/unit/schemas/: test_config.py
