[project]
name = "namecheap-wrapper"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


authors=[
    {name = "Manvendra Rajpoot", email="welzyalzy@gmail.com"}
]

license = {text = "MIT"}

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "xmltodict>=1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.2",
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"



[tool.pytest.ini_options]
addopts = "--cov=namecheap_wrapper --cov-report=term-missing"
